Revert "Fixed overflow for readme container headers"
This reverts commit b0148a88ed823162835b9f0005294e0fe8640d34.

--- a/zeek-package-website/static/css/style.css
+++ b/zeek-package-website/static/css/style.css
@@ -153,10 +153,6 @@ h2 {
     max-height: 100%;
 }
 
-.readme-container h1 {
-    overflow: hidden;
-}
-
 .small-card {
     background-color: #FFFFFF;
     border-radius: 6px;
